Added Full page

--- a/index.html
+++ b/index.html
@@ -10,18 +10,50 @@
 </head>
 
 <body class="p-3 mb-2 bg-dark text-white">
-<div>
-    <a class="btn btn-outline-danger mb-2" href="https://drive.google.com/file/d/1g62ZLVpevMKNty9GDud3KnQokHGYrTAi/view?usp=sharing">Xenopax Art Optimization</a>
-    <a class="btn btn-outline-danger mb-2" href="https://drive.google.com/file/d/1Ji15yR0ypoVz41-Qxd1IUB0gHp1Qb53U/view?usp=sharing">42's Mechs of Beauty</a>
-    <a class="btn btn-outline-danger mb-2" href="https://drive.google.com/file/d/1UKCsZG5NwDDd4PVA8ktq2mIf2kteg3S1/view?usp=sharing">Coyotes mission mod</a>
-    <a class="btn btn-outline-danger mb-2" href="https://drive.google.com/file/d/1nAzzHfkofnpo1rTGmk1eF6KTu-HrrrqF/view?usp=sharing">vonBiomes</a>
-    <a class="btn btn-outline-danger mb-2" href="https://drive.google.com/file/d/1v1J1Hd2o1kp7cb9v-Rg8Zt-RyI5StTM2/view?usp=sharing">330s_PilotOverhaul</a>
-    <a class="btn btn-outline-danger mb-2" href="https://drive.google.com/file/d/1qCwUyodHqa8-vItyAuBsZIak2TjpTwf2/view?usp=sharing">Camo_Spec</a>
-    <a class="btn btn-outline-danger mb-2" href="https://drive.google.com/file/d/1m3jowVzrXQUlulxaMYqHgofKYc1UnV4A/view?usp=sharing">3 - Original cockpit</a>
-    <a class="btn btn-outline-danger mb-2" href="https://drive.google.com/file/d/1ojYN3KX_1sHDp0zkzCt3POxqcO-rXAnm/view?usp=sharing">MWOPack</a>
-    <a class="btn btn-outline-danger mb-2" href="https://drive.google.com/file/d/1EfiubHXJjVCavosOd3c9Oq6TN0x_Vnxc/view?usp=sharing">YetAnotherMechlab</a>
+    <h1 class="mb-2" align="center">MW 5 Modpack Links</h1>
+    <div class="col-xs-1" align="center">
+        <h3 class="mb-2">Multiplayer Mods</h3>
+        <a class="btn btn-outline-light mb-2" href="https://www.nexusmods.com/mechwarrior5mercenaries/mods/537">Mod Options</a>
+        <a class="btn btn-outline-light mb-2" href="https://drive.google.com/file/d/1g62ZLVpevMKNty9GDud3KnQokHGYrTAi/view?usp=sharing">Xenopax Art Optimization</a>
+        <a class="btn btn-outline-light mb-2" href="https://www.nexusmods.com/mechwarrior5mercenaries/mods/706">Co-op Unlocked</a>
+        <a class="btn btn-outline-light mb-2" href="https://drive.google.com/file/d/1Ji15yR0ypoVz41-Qxd1IUB0gHp1Qb53U/view?usp=sharing">42's Mechs of Beauty</a>
+        <a class="btn btn-outline-light mb-2" href="https://www.nexusmods.com/mechwarrior5mercenaries/mods/699">Mech Delivery</a>
+        <a class="btn btn-outline-light mb-2" href="https://www.nexusmods.com/mechwarrior5mercenaries/mods/93">Lore Style 1 Day Armor Repairs</a>
+        <a class="btn btn-outline-light mb-2" href="https://drive.google.com/file/d/1UKCsZG5NwDDd4PVA8ktq2mIf2kteg3S1/view?usp=sharing">Coyotes mission mod</a>
+        <a class="btn btn-outline-light mb-2" href="https://drive.google.com/file/d/1nAzzHfkofnpo1rTGmk1eF6KTu-HrrrqF/view?usp=sharing">vonBiomes</a>
+        <a class="btn btn-outline-light mb-2" href="https://www.nexusmods.com/mechwarrior5mercenaries/mods/680">Stacked Crates - Loot Crate Overhaul</a>
+        <a class="btn btn-outline-light mb-2" href="https://www.nexusmods.com/mechwarrior5mercenaries/mods/485">Repair Bays</a>
+        <a class="btn btn-outline-light mb-2" href="https://www.nexusmods.com/mechwarrior5mercenaries/mods/269">TTRulez_AIMod2/LancemateOrderz</a>
+        <a class="btn btn-outline-light mb-2" href="https://drive.google.com/file/d/1v1J1Hd2o1kp7cb9v-Rg8Zt-RyI5StTM2/view?usp=sharing">330s_PilotOverhaul</a>
+        <a class="btn btn-outline-light mb-2" href="https://www.nexusmods.com/mechwarrior5mercenaries/mods/715">Rebalanced and Expanded Rifles</a>
+        <a class="btn btn-outline-light mb-2" href="https://drive.google.com/file/d/1qCwUyodHqa8-vItyAuBsZIak2TjpTwf2/view?usp=sharing">Camo_Spec</a>
+        <a class="btn btn-outline-light mb-2" href="https://www.nexusmods.com/mechwarrior5mercenaries/mods/698">Quad Battlemechs</a>
+        <a class="btn btn-outline-light mb-2" href="https://drive.google.com/file/d/1ojYN3KX_1sHDp0zkzCt3POxqcO-rXAnm/view?usp=sharing">MWO Mechs in MW5 Pack</a>
+        <a class="btn btn-outline-light mb-2" href="https://www.nexusmods.com/mechwarrior5mercenaries/mods/534">T6M's Custom Mechs and Refits </a>
+        <a class="btn btn-outline-light mb-2" href="https://www.nexusmods.com/mechwarrior5mercenaries/mods/684">T6M's Marauder III</a>
+        <a class="btn btn-outline-light mb-2" href="https://www.nexusmods.com/mechwarrior5mercenaries/mods/691">T6M's Marauder IV</a>
+        <a class="btn btn-outline-light mb-2" href="https://www.nexusmods.com/mechwarrior5mercenaries/mods/257">OmniCore (YAML - YAW)</a>
+        <a class="btn btn-outline-light mb-2" href="https://www.nexusmods.com/mechwarrior5mercenaries/mods/645">Savage Wolf MC-MKIV YAML Edition</a>
+        <a class="btn btn-outline-light mb-2" href="https://drive.google.com/file/d/1m3jowVzrXQUlulxaMYqHgofKYc1UnV4A/view?usp=sharing">Timberwolf - Mad Cat - Original cockpit(YAML)</a>
+        <a class="btn btn-outline-light mb-2" href="https://www.nexusmods.com/mechwarrior5mercenaries/mods/592">Yet Another Equipment Collection</a>
+        <a class="btn btn-outline-light mb-2" href="https://www.nexusmods.com/mechwarrior5mercenaries/mods/665">YAML Mechs In Campaign</a>
+        <a class="btn btn-outline-light mb-2" href="https://drive.google.com/file/d/1EfiubHXJjVCavosOd3c9Oq6TN0x_Vnxc/view?usp=sharing">YetAnotherMechlab</a>
+        <a class="btn btn-outline-light mb-2" href="https://www.nexusmods.com/mechwarrior5mercenaries/mods/241">Yet Another Weapon Clan</a>
+        <a class="btn btn-outline-light mb-2" href="https://www.nexusmods.com/mechwarrior5mercenaries/mods/165">Yet Another Weapon</a>
+        <a class="btn btn-outline-light mb-2" href="https://www.nexusmods.com/mechwarrior5mercenaries/mods/168">MW5 Mod Compatibility Pack</a>
+        <a class="btn btn-outline-light mb-2" href="https://www.nexusmods.com/mechwarrior5mercenaries/mods/649">Yet Another Special Variant</a>
 </div>
-
+<h3 class="mb-2" align="center">Client-Side Visual Mods</h3>
+<div class="col-xs-1" align="center">
+    <a class="btn btn-outline-secondary mb-2" href="https://www.nexusmods.com/mechwarrior5mercenaries/mods/649">Star Map Mouse Over - Mission Logos</a>
+    <a class="btn btn-outline-secondary mb-2" href="https://steamcommunity.com/sharedfiles/filedetails/?id=2611433872">YetiJSAnimRem(Removes Jumpship Animation)</a>
+    <a class="btn btn-outline-secondary mb-2" href="https://www.nexusmods.com/mechwarrior5mercenaries/mods/190">42's Mechs of Beauty</a>
+    <a class="btn btn-outline-secondary mb-2" href="https://www.nexusmods.com/mechwarrior5mercenaries/mods/256">Cockpit Glass</a>
+    <a class="btn btn-outline-secondary mb-2" href="https://www.nexusmods.com/mechwarrior5mercenaries/mods/420">Color Heat Gauge</a>
+    <a class="btn btn-outline-secondary mb-2" href="https://www.nexusmods.com/mechwarrior5mercenaries/mods/456">Compass Headings</a>
+    <a class="btn btn-outline-secondary mb-2" href="https://www.nexusmods.com/mechwarrior5mercenaries/mods/435">Precision Sights (unofficial update)</a>
+    <a class="btn btn-outline-secondary mb-2" href="https://www.nexusmods.com/mechwarrior5mercenaries/mods/412">Advanced Zoom</a>
+</div>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
