--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         <a class="btn btn-outline-light mb-2" href="https://www.nexusmods.com/mechwarrior5mercenaries/mods/165">Yet Another Weapon</a>
         <a class="btn btn-outline-light mb-2" href="https://www.nexusmods.com/mechwarrior5mercenaries/mods/168">MW5 Mod Compatibility Pack</a>
         <a class="btn btn-outline-light mb-2" href="https://www.nexusmods.com/mechwarrior5mercenaries/mods/649">Yet Another Special Variant</a>
-</div>
+</div> 
 <h3 class="mb-2" align="center">Client-Side Visual Mods</h3>
 <div class="col-xs-1" align="center">
     <a class="btn btn-outline-secondary mb-2" href="https://www.nexusmods.com/mechwarrior5mercenaries/mods/649">Star Map Mouse Over - Mission Logos</a>
@@ -53,6 +53,7 @@
     <a class="btn btn-outline-secondary mb-2" href="https://www.nexusmods.com/mechwarrior5mercenaries/mods/456">Compass Headings</a>
     <a class="btn btn-outline-secondary mb-2" href="https://www.nexusmods.com/mechwarrior5mercenaries/mods/435">Precision Sights (unofficial update)</a>
     <a class="btn btn-outline-secondary mb-2" href="https://www.nexusmods.com/mechwarrior5mercenaries/mods/412">Advanced Zoom</a>
+    <a class="btn btn-outline-secondary mb-2" href="https://www.nexusmods.com/mechwarrior5mercenaries/mods/536">Heads-Up Display (HUD Keyword)</a>
 </div>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
